@@ -19,7 +19,6 @@ package org.apache.solr.cli;
 import java.lang.invoke.MethodHandles;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import org.apache.commons.cli.CommandLine;
 import org.apache.commons.cli.Option;
 import org.apache.commons.cli.Options;
@@ -81,11 +80,11 @@ public class ConfigSetDownloadTool extends ToolBase {
 
     echoIfVerbose("\nConnecting to ZooKeeper at " + zkHost + " ...");
     try (SolrZkClient zkClient = CLIUtils.getSolrZkClient(cli, zkHost)) {
-      Path configSetPath = Paths.get(confDir);
+      Path configSetPath = Path.of(confDir);
       // we try to be nice about having the "conf" in the directory, and we create it if it's not
       // there.
       if (!configSetPath.endsWith("/conf")) {
-        configSetPath = Paths.get(configSetPath.toString(), "conf");
+        configSetPath = Path.of(configSetPath.toString(), "conf");
       }
       Files.createDirectories(configSetPath);
       echo(
