@@ -24,7 +24,6 @@ import java.net.Socket;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
@@ -44,7 +43,7 @@ public class SolrGraphiteReporterTest extends SolrTestCaseJ4 {
   @Test
   public void testReporter() throws Exception {
     int jmxReporter = JmxUtil.findFirstMBeanServer() != null ? 1 : 0;
-    Path home = Paths.get(TEST_HOME());
+    Path home = Path.of(TEST_HOME());
     // define these properties, they are used in solrconfig.xml
     System.setProperty("solr.test.sys.prop1", "propone");
     System.setProperty("solr.test.sys.prop2", "proptwo");
