@@ -21,7 +21,7 @@ import static org.hamcrest.CoreMatchers.hasItems;
 import static org.hamcrest.CoreMatchers.not;
 
 import java.io.IOException;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.time.ZonedDateTime;
 import java.util.Arrays;
 import java.util.Collection;
@@ -46,7 +46,7 @@ public abstract class AbstractAtomicUpdatesMultivalueTestBase extends EmbeddedSo
 
   protected static void initWithRequestWriter(RequestWriterSupplier requestWriterSupplier)
       throws Exception {
-    solrClientTestRule.startSolr(Paths.get(SolrTestCaseJ4.TEST_HOME()));
+    solrClientTestRule.startSolr(Path.of(SolrTestCaseJ4.TEST_HOME()));
 
     System.setProperty("enable.update.log", "true");
     SolrTestCaseJ4.newRandomConfig();
