@@ -18,7 +18,7 @@
 package org.apache.solr.client.ref_guide_examples;
 
 import java.io.File;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.List;
 import org.apache.solr.cloud.SolrCloudTestCase;
 import org.apache.solr.core.ConfigSetService;
@@ -70,8 +70,7 @@ public class ZkConfigFilesTest extends SolrCloudTestCase {
     assertConfigsContainOnly();
 
     // tag::zk-configset-upload[]
-    getConfigSetService()
-        .uploadConfig("nameForConfigset", Paths.get(localConfigSetDirectory), false);
+    getConfigSetService().uploadConfig("nameForConfigset", Path.of(localConfigSetDirectory), false);
     // end::zk-configset-upload[]
 
     assertConfigsContainOnly("nameForConfigset");
