@@ -45,7 +45,6 @@ import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.security.SecureRandom;
 import java.time.Instant;
@@ -571,7 +570,7 @@ public abstract class SolrTestCaseJ4 extends SolrTestCase {
     assertNotNull(solrHome);
     configString = config;
     schemaString = schema;
-    testSolrHome = Paths.get(solrHome);
+    testSolrHome = Path.of(solrHome);
     System.setProperty("solr.solr.home", solrHome);
     initCore();
   }
